force-app/main/default/objects/Expense__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Supermercado</fullName><default
        >false</default><label>Supermercado</label></value>
            <value><fullName>Colegio</fullName><default>false</default><label
        >Colegio</label></value>
            <value><fullName>Salud</fullName><default>false</default><label
        >Salud</label></value>
            <value><fullName>Auto</fullName><default>false</default><label
        >Auto</label></value>
            <value><fullName>Hogar</fullName><default>false</default><label
        >Hogar</label></value>
            <value><fullName>Ropa</fullName><default>false</default><label
        >Ropa</label></value>
            <value><fullName>Entretenimiento</fullName><default
        >false</default><label>Entretenimiento</label></value>
            <value><fullName>Servicios</fullName><default>false</default><label
        >Servicios</label></value>
            <value><fullName>Otros</fullName><default>false</default><label
        >Otros</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>