force-app/main/default/objects/Expense__c/fields/Counts_Toward_Budget__c.field-meta.xml
<CustomField>
    <fullName>Counts_Toward_Budget__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >If true, this expense's installments also count toward Monthly_Budget committed/rollover (the credit-limit view). Installments are always created regardless of this flag, so the expense can still be counted for spending in its respective months.</description>
    <label>Counts Toward Budget</label>
    <type>Checkbox</type>
</CustomField>