force-app/main/default/objects/Expense__c/fields/Counts_Toward_Spending__c.field-meta.xml
<CustomField>
    <fullName>Counts_Toward_Spending__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >If true, this expense appears in the monthly spending control view (cash / other cards / dual tracking).</description>
    <label>Counts Toward Spending</label>
    <type>Checkbox</type>
</CustomField>