force-app/main/default/objects/Expense__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <description
  >Mes de la última cuota. Calculado como Purchase_Date__c + (Number_Of_Installments__c - 1) meses.</description>
    <type>Date</type>
    <formula
  >ADDMONTHS(Purchase_Date__c, VALUE(TEXT(Number_Of_Installments__c)) - 1)</formula>
</CustomField>