force-app/main/default/objects/Expense__c/fields/Installment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Installment_Amount__c</fullName>
    <label>Installment Amount</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <formula>Total_Amount__c / VALUE(TEXT(Number_Of_Installments__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>