force-app/main/default/objects/Expense__c/fields/Monthly_Budget__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Presupuesto del mes de compra. Lo completa el trigger; no se edita a mano.</description>
    <label>Monthly Budget</label>
    <referenceTo>Monthly_Budget__c</referenceTo>
    <relationshipLabel>Purchases</relationshipLabel>
    <relationshipName>Purchases</relationshipName>
    <type>Lookup</type>
</CustomField>