force-app/main/default/objects/Expense__c/fields/Number_Of_Installments__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Installments__c</fullName>
    <label>Number of Installments</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>1</fullName><default>true</default><label
        >1</label></value>
            <value><fullName>2</fullName><default>false</default><label
        >2</label></value>
            <value><fullName>3</fullName><default>false</default><label
        >3</label></value>
            <value><fullName>4</fullName><default>false</default><label
        >4</label></value>
            <value><fullName>5</fullName><default>false</default><label
        >5</label></value>
            <value><fullName>6</fullName><default>false</default><label
        >6</label></value>
            <value><fullName>7</fullName><default>false</default><label
        >7</label></value>
            <value><fullName>8</fullName><default>false</default><label
        >8</label></value>
            <value><fullName>9</fullName><default>false</default><label
        >9</label></value>
            <value><fullName>10</fullName><default>false</default><label
        >10</label></value>
            <value><fullName>11</fullName><default>false</default><label
        >11</label></value>
            <value><fullName>12</fullName><default>false</default><label
        >12</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>