force-app/main/default/objects/Expense__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description
  >How the expense was paid. Used for labeling; budget vs spending impact is controlled by the Counts Toward flags.</description>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tarjeta presupuesto</fullName>
                <default>true</default>
                <label>Tarjeta presupuesto</label>
            </value>
            <value>
                <fullName>Otra tarjeta</fullName>
            </value>
            <value>
                <fullName>Efectivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>