force-app/main/default/objects/Expense__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <label>Person</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Diego</fullName><default>true</default><label
        >Diego</label></value>
            <value><fullName>Emi</fullName><default>false</default><label
        >Emi</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>