force-app/main/default/objects/Expense__c/fields/Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date__c</fullName>
    <label>Purchase Date</label>
    <description
  >Fecha de la compra. Es el ancla del mes de la primera cuota.</description>
    <required>true</required>
    <type>Date</type>
    <defaultValue>TODAY()</defaultValue>
</CustomField>