force-app/main/default/objects/Expense__c/validationRules/Installments_At_Least_One.validationRule-meta.xml
<ValidationRule>
    <fullName>Installments_At_Least_One</fullName>
    <active>true</active>
    <errorConditionFormula
  >VALUE(TEXT(Number_Of_Installments__c)) &lt; 1</errorConditionFormula>
    <errorDisplayField>Number_Of_Installments__c</errorDisplayField>
    <errorMessage>La cantidad de cuotas debe ser al menos 1.</errorMessage>
</ValidationRule>