force-app/main/default/objects/Expense__c/validationRules/Total_Amount_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Amount_Must_Be_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Amount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Total_Amount__c</errorDisplayField>
    <errorMessage>El monto total debe ser mayor a 0.</errorMessage>
</ValidationRule>