force-app/main/default/objects/Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <label>All</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Purchase_Date__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Number_Of_Installments__c</columns>
    <columns>Installment_Amount__c</columns>
    <columns>End_Date__c</columns>
    <columns>Category__c</columns>
    <columns>Person__c</columns>
</ListView>